--- a/russian-travel/index.html
+++ b/russian-travel/index.html
@@ -16,11 +16,14 @@
         <header class="header">
             <img class="header__logo" src="images/__logo.svg" alt="Российская Федерация">
 
-
-            <a class="header__lang-link header__lang-link_selected" href="# ">Ru</a>
-
-            <a class="header__lang-link header__lang-link_no-selected" href="# ">En</a>
-
+            <ul class="header__lang-container">
+                <li>
+                    <a class="header__lang-link" href="# ">Ru</a>
+                </li>
+                <li>
+                    <a class="header__lang-link header__lang-link_no-selected" href="# ">En</a>
+                </li>
+            </ul>
         </header>
         <main class="content">
             <section class="lead">
@@ -36,11 +39,11 @@
                     и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила
                     их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
                 <ul class="intro__list">
-                    <li><span class="span">Часовых поясов</span> 11</li>
-                    <li><span class="span">Объектов природного наследия ЮНЕСКО</span> 12</li>
-                    <li><span class="span">Объектов культурного наследия ЮНЕСКО</span> 16</li>
-                    <li><span class="span">Природных заповедников</span> 105</li>
-                    <li><span class="span">Аэропортов</span> 241</li>
+                    <li><span class="intro__span">Часовых поясов</span> 11</li>
+                    <li><span class="intro__span">Объектов природного наследия ЮНЕСКО</span> 12</li>
+                    <li><span class="intro__span">Объектов культурного наследия ЮНЕСКО</span> 16</li>
+                    <li><span class="intro__span">Природных заповедников</span> 105</li>
+                    <li><span class="intro__span">Аэропортов</span> 241</li>
                 </ul>
             </section>
             <section class="photo-grid">
@@ -70,7 +73,7 @@
                             мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.
                         </p>
                     </div>
-                    <img class="place__image" src="images/place-kosa.jpg" alt="фото побережья Куршской косы ">
+                    <img class="place__image" src="images/place-kosa.jpg" alt="фото побережья Куршской косы">
                 </div>
                 <div class="place">
                     <h2 class="place__title title">Кольский</h2>
@@ -132,23 +135,23 @@
         </main>
         <footer class="footer">
             <ul class="footer__links">
-                <li>
+                <li class="footer__container">
                     <a href=" https://yandex.ru/maps" class="link footer__link">Карты</a>
                 </li>
-                <li>
-                    <a href="https://yandex.ru/pogoda" class="link footer__link">Погода</a>
+                <li class="footer__container">
+                    <a href=" https://yandex.ru/pogoda " class="link footer__link ">Погода</a>
                 </li>
-                <li>
-                    <a href="https://rasp.yandex.ru" class="link footer__link">Расписание</a>
+                <li class="footer__container">
+                    <a href=" https://rasp.yandex.ru " class="link footer__link ">Расписание</a>
                 </li>
-                <li>
-                    <a href="https://calendar.yandex.ru" class="link footer__link">Календарь</a>
+                <li class="footer__container">
+                    <a href=" https://calendar.yandex.ru " class="link footer__link ">Календарь</a>
                 </li>
-                <li>
-                    <a href="https://travel.yandex.ru" class="link footer__link">Путешествия</a>
+                <li class="footer__container">
+                    <a href=" https://travel.yandex.ru " class="link footer__link ">Путешествия</a>
                 </li>
             </ul>
-            <p class="footer__coopyright">© 2020. Катя Иванова</p>
+            <p class="footer__coopyright ">© 2020. Катя Иванова</p>
 
         </footer>
     </div>
